# medstudent

./: .gitignore  Home.py  IMPORTSQLITE.PY  answers.csv  concepts.csv  initialize_database.py  medstudent.code-workspace  medstudent.db  pyproject.toml  questions.csv  requirements.txt  services.py  style.css  update.py  update_db.py  upload_simulados.py  users.csv
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml
pages/: 1_Meu_Perfil.py  1_Simulado.py  2_Meu_Perfil.py  2_Posologia.py  2_Questões.py  2_Simulado.py  3_Posologia.py  3_Revisão.py  3_Revisão_de_Questões.py  4_Posologia.py  5_Wiki_de_Conceitos.py
simulados/: enade-2023.json  sus-ba-clinica-medica.json  sus-ba-ginecologicas.json
src/medstudent/: app.py
src/medstudent/pages/: 1_Simulado.py  2_Posologia.py
src/simulados/: sus-ba-ginecologicas.json
