[tool.poetry]
name = "medstudent"
version = "0.1.0"
description = "Simulador de questões ENAMED e ferramentas de estudo para medicina."
authors = ["Yasmin e Marcelo <marceloopcunha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Dependências essenciais para o projeto.
# O símbolo '^' permite que o Poetry encontre as melhores versões compatíveis.
streamlit = "^1.34.0"
gspread = "^6.0.0"
pandas = "^2.2.0"
google-generativeai = "^0.5.0"
plotly = "^5.18.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
