# ==============================================================================
# ARQUIVO 1: pyproject.toml (Versão Final com a Correção Crucial)
# ==============================================================================

[tool.poetry]
name = "medstudent-app"
version = "0.1.0"
description = "Simulador de questões ENAMED e ferramentas de estudo para medicina."
authors = ["Yasmin e Marcelo <marceloopcunha@gmail.com>"]
readme = "README.md"
package-mode = false  # <--- ESSA É A LINHA QUE RESOLVE O ERRO DE INSTALAÇÃO

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Dependências essenciais para o projeto.
streamlit = "^1.34.0"
gspread = "^6.0.0"
pandas = "^2.2.0"
google-generativeai = "^0.5.0"
plotly = "^5.18.0"
toml = "^0.10.2"
bcrypt = "^4.3.0"
st-supabase-connection = "^2.1.0"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
